samples/_failures_safe/1761461881_caf61a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d096e40a.c: In function ‘dijkstra’:
./samples/SAFE/__tmp_d096e40a.c:161:21: error: expected declaration or statement at end of input
  161 |                     if (new_dist < dist[neighbor] && new_dist <= INT_MAX) {
      |                     ^~
./samples/SAFE/__tmp_d096e40a.c:161:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_d096e40a.c:161:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_d096e40a.c:161:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_d096e40a.c:161:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_d096e40a.c:161:21: error: expected declaration or statement at end of input
